--- a/css/BTCHomeWidgetStyle.css
+++ b/css/BTCHomeWidgetStyle.css
@@ -1,144 +1,98 @@
 /**********
 BTC Styles
 **********/
-#blurb{
-    font-family: "Georgia, serif";
+#btc-widget-home {
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+#btc-widget-bground {
+    position: relative;
+    padding: 0px;
+    z-index:9999;
+    /*background-color: #f2f2f2;*/
+    background-image: url("/img/widgetbg.png");
+    background-repeat:no-repeat;
+    padding-bottom: 4px;
+}
+#btc-widget-top-link{
+	border-style=solid;
+	border-width=10px;
+}
+#btc-widget-header {
+    float: left;
+    margin-left: 10px;
+    margin-top: 35px;
+    background-color: #fff;
+    color: #000;
+    height: 150px;
+    width: 280px;
+    z-index:2;
+    overflow: hidden;
+    cursor: pointer;
+}
+ #btc-widget-title {
+    float: left;
+    margin-left 10px;
+    font-family:"Georgia, serif";
     font-size: 18px;
-    padding-bottom: 3px;
-    padding-top: 2px;
-    
-}
-#watchnow{
-    display: table;
-    margin: 0 auto;
-    vertical-align: middle;
-    width: 95%;
-    font-family: Arial, Helvetica, sans-serif !important;
-    /*font-family: "Comic Sans MS", cursive, sans-serif;*/
-    font-size: 13px;
-    /*font-weight: bold;*/
-    padding-top: 4px;
-}
-#watchnow a:hover {
     color: #136AA8;
+    padding-left: 10px;
+    padding-bottom: 4px;
+    padding-top: 4px;
+    text-decoration: none;
+	cursor: pointer;
 }
-#watchnow a:link {
+#btc-widget-title:hover{
+	color: #136AA8;
+	text-decoration: underline;
+}
+#btc-widget-blurb {
+    float: left;
+    margin-left: 10px;
+    font-family: Arial, Helvetica, sans-serif !important;
+    font-size: 13px;
+    text-align: left;
+}
+#btc-widget-blurb span {
+	color: #136AA8;
     text-decoration: none;
 }
-#watchnow a img {
-    display:block;
+#btc-widget-blurb span:hover {
+    color: #136AA8;
+    text-decoration: underline;
+    cursor: pointer;
+}
+#btc-widget-blurb a img {
+    display:none;
     margin:auto;
 }
- #widget-title-in-btc {
-    line-height: 22px;
-}
-.widget-btc-150x150 {
-    position: relative;
-    padding: 0px;
+#btc-widget-thumb {
+    width: 280px;
     height: 150px;
-    z-index:9999;
-    width: 152px;
 }
-.widget-btc-320x165 {
-    position: relative;
-    padding: 0px;
-    height: 195px;
-    z-index:9999;
-    width: 300px;
-    background-color: #f2f2f2;
-    padding-bottom: 50px;
-}
-.widget-btc-150x150 .header-btc {
-    background-color: #fff;
-    color: #000;
-    height: 95px;
-    width: 150px;
-    z-index:2;
-    overflow: hidden;
-    cursor: pointer;
-}
-.widget-btc-320x165 .header-btc {
-    background-color: #fff;
-    color: #000;
-    height: 165px;
-    width: 300px;
-    z-index:2;
-    overflow: hidden;
-    cursor: pointer;
-}
-.playbtn-btc-150x150 {
+#btc-widget-playbtn {
     position:absolute;
-    left:50px;
-    top:20px;
+    left:120px;
+    top:80px;
     width: 65px;
     height: 65px;
     z-index: 2;
     background-image: url("/img/PlaySmall.png");
     background-repeat:no-repeat;
     cursor: pointer;
-    opacity:0.8;
-    filter:alpha(opacity=80);
+    /*opacity:0.8;
+    filter:alpha(opacity=80);*/
 }
-.playbtn-btc-320x165 {
-    position:absolute;
-    left:130px;
-    top:50px;
-    width: 65px;
-    height: 65px;
-    z-index: 2;
-    background-image: url("/img/PlaySmall.png");
-    background-repeat:no-repeat;
-    cursor: pointer;
-    opacity:0.8;
-    filter:alpha(opacity=80);
-}
-.widget-btc-150x150.widget-btc-320x165 .title-btc {
-    background-color: #fff;
-    color: #000;
+#btc-widget-ad-imp {
     height: 50px;
-    width: 195px;
-    padding-left: 0px;
-    padding-top: 10px;
-    z-index:2;
-    font-family:"Merriweather", Georgia, "Times New Roman", Times, serif !important;
-    font-size: 18px;
-    line-height: 22px;
-    font-weight: bold;
-}
-.widget-btc-150x150 .suspensor-btc {
-    /*height: 44px;
-    width: 152px;
-    margin-left: 0px;
-    z-index:2;*/
-    height: 44px;
-    width: 152px;
+    width: 300px; 
     padding-top: 0px;
-    margin-left: 0px;
-    z-index:-1;
-}
-.widget-btc-320x165 .suspensor-btc {
-    height: 45px;
-    width: 300px;
-    padding-top: 5px;
     margin-left: 0px;
     background-color:#f2f2f2;
     color:#000;
-    z-index:2;
+    z-index:2; 
 }
-.widget-btc-150x150.widget-btc-320x165 .seeMore-btc {
-    height: 128px;
-    background-color:#fff;
-    width: 195px;
-    line-height: 16px;
-    background-image: url("/img/seeMoreB.png");
-    font-family:"Merriweather", Georgia, "Times New Roman", Times, serif !important;
-    font-size: 13px;
-    padding-top: 30px;
-    background-repeat:no-repeat;
-    cursor: pointer;
-    z-index:2;
-}
-.widget-btc-150x150 .openB-btc, .widget-btc-320x165 .openB-btc {
+#btc-widget-open-bground {
     position:absolute;
     right:0;
     top:0;
@@ -152,96 +106,77 @@ BTC Styles
     background-image: url("/img/bottomBG2.jpg");
     background-repeat:no-repeat;
 }
-.widget-btc-150x150 .openB-btc .divL-btc, .widget-btc-320x165 .openB-btc .divL-btc {
+#btc-widget-open-title {
+    line-height: 22px;
+}
+#btc-widget-open-divL {
     float: left;
-    padding-top: 240px;
+    /*padding-top: 240px;*/
     width: 130px;
-    height: 165px;
-    z-index: 4;
-}
-.widget-btc-150x150 .openB-btc .divL-btc .tweeter-btc, .widget-btc-320x165 .openB-btc .divL-btc .tweeter-btc {
-    float: left;
-    margin-bottom: 10px;
-    margin-left: 110px;
-    z-index: 5;
-    width: 33px;
-    height: 33px;
-    background-image: url("/img/tweet.png");
-    background-repeat:no-repeat;
-    cursor: pointer;
-}
-.widget-btc-150x150 .openB-btc .divL-btc .fb-btc, .widget-btc-320x165 .openB-btc .divL-btc .fb-btc {
-    float: left;
-    margin-bottom: 10px;
-    margin-left: 110px;
-    z-index: 5;
-    width: 33px;
-    height: 33px;
-    background-image: url("/img/fb.png");
-    background-repeat:no-repeat;
-    cursor: pointer;
-}
-.widget-btc-150x150 .openB-btc .divC-btc, .widget-btc-320x165 .openB-btc .divC-btc {
-    float: left;
-    width: 491px;
     height: 405px;
     z-index: 4;
 }
-.widget-btc-150x150 .openB-btc .divC-btc .video-btc, .widget-btc-320x165 .openB-btc .divC-btc .video-btc {
+#btc-widget-open-divC {
+    float: left;
+    width: 490px;
+    height: 405px;
+    z-index: 4;
+}
+#btc-widget-open-divR {
+    float: left;
+    width: 30px;
+    height: 405px;
+    z-index: 4;
+
+}
+#btc-widget-open-slide {
     float: left;
     background-color: #fff;
     margin-top: 27px;
-    width: 491px;
+    width: 490px;
     height: 335px;
     z-index: 4;
 }
-.widget-btc-150x150 .openB-btc .divC-btc .video-btc .top-btc, .widget-btc-320x165 .openB-btc .divC-btc .video-btc .top-btc {
+#btc-widget-open-title {
     float: left;
     margin-left: 10px;
-    width: 471px;
-    height: 60px;
-    z-index: 4;
-    background-image: url("/img/videoTop.png");
-    background-repeat:no-repeat;
-}
-.widget-btc-150x150 .openB-btc .divC-btc .video-btc .top-btc .top-link-btc, .widget-btc-320x165 .openB-btc .divC-btc .video-btc .top-btc .top-link-btc {
-    float: right;
     margin-top: 10px;
-    width: 120px;
-    height: 40px;
-    z-index: 4;
-    cursor: pointer;
-}
-.widget-btc-150x150 .openB-btc .divC-btc .video-btc .top-btc .top-title-btc, .widget-btc-320x165 .openB-btc .divC-btc .video-btc .top-btc .top-title-btc {
-    float: left;
     color: #333;
-    margin-top: 10px;
-    width: 300px;
-    height: 30px;
-    z-index: 4;
-    vertical-align: middle;
     font-family:"Merriweather", Georgia, "Times New Roman", Times, serif !important;
     font-size: 20px;
-    text-align: left;
+    z-index: 4;
 }
-.widget-btc-150x150 .openB-btc .player-btc, .widget-btc-320x165 .openB-btc .player-btc {
+#btc-widget-open-more-btn {
+    float: right;
+    margin-top: 10px;
+    margin-right: 10px;
+    width: 130px;
+    height: 40px;
+    z-index: 4;
+    background-image: url("/img/watchmore.png");
+    background-repeat:no-repeat;
+    cursor: pointer;
+}
+#btc-widget-open-player {
     margin-left: 10px;
     margin-top: 60px;
-    width: 471px;
+    width: 470px;
     height: 265px;
     z-index: 9999;
     background-color: #000;
     color: #fff;
     overflow: hidden;
 }
-.widget-btc-150x150 .openB-btc .divR-btc, .widget-btc-320x165 .openB-btc .divR-btc {
-    margin-left:330px;
-    margin-top:0px;
-    width: 320px;
-    height: 405px;
-    z-index: 4;
+#btc-widget-open-ad {
+    height: 250px;
+    width: 300px; 
+    margin-top: 65px;
+    margin-left: 505px;
+    background-color:#f2f2f2;
+    color:#000;
+    z-index:2; 
 }
-.widget-btc-150x150 .openB-btc .divR-btc .close-btc, .widget-btc-320x165 .openB-btc .divR-btc .close-btc {
+#btc-widget-open-close-btn {
     float: right;
     margin-top: 15px;
     margin-right: 5px;
@@ -249,33 +184,4 @@ BTC Styles
     height: 12px;
     z-index: 4;
     cursor: pointer;
-}
-.widget-btc-150x150 .openB-btc .divR-btc .suspensorB-btc, .widget-btc-320x165 .openB-btc .divR-btc .suspensorB-btc {
-    float: left;
-    margin-left: 5px;
-    margin-top: 63px;
-    height: 300px;
-    width: 250px;
-    color:#000;
-    z-index:4;
-}
-.ooyalaplayer-btc {
-    width:471px;
-    height: 265px;
-}
-.widget-preview-btc-150x150 {
-    width: 150px;
-    height: 95px;
-}
-.widget-preview-btc-320x165 {
-    width: 300px;
-    height: 165px;
-}
-.widget-preview-btc-img-150x150{
-    width: 150px;
-    height: 93px;
-}
-.widget-preview-btc-img-320x165{
-    width: 300px;
-    height: 165px;
 }
